@@ -1,3 +1,9 @@
+2007-01-09  Pat Thoyts  <patthoyts@users.sourceforge.net>
+
+	* tkchat.tcl: Fixed the googlefight command and added wikipedia
+	and wiktionary link commands (/wikid and /wikip)
+	Thanks to Joe Decoster.
+
 2006-12-06  Reinhard Max  <max@suse.de>
 
 	* tkchat.tcl: Fixed the code that finds the real location of the
